--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = sveetch-python-sample
-version = 0.1.0
+version = 0.2.0
 description = A project example created from cookiecutter-sveetch-python.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -18,6 +18,9 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 include_package_data = True
@@ -71,7 +74,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py35
+envlist =  py{36,37,38}
 
 [testenv]
 
