[0.3.0] Upgrade from cookiecutter template release 0.3.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = sveetch-python-sample
-version = 0.2.0
+version = 0.3.0
 description = A project example created from cookiecutter-sveetch-python.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -21,11 +21,12 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
 
 [options]
 include_package_data = True
 install_requires =
-    click>=7.0,<8.0
+    click>=8.0
     colorama
     colorlog
 packages = find:
@@ -39,6 +40,7 @@ dev =
     sphinx-rtd-theme
     livereload
     twine
+    tox
 
 [options.packages.find]
 where = .
@@ -74,7 +76,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist =  py{36,37,38}
+envlist =  py{36,37,38,39}
 
 [testenv]
 
