[CHG] Upgraded from project template release 0.4.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,18 @@
 ;;
 [metadata]
 name = sveetch-python-sample
-version = 0.3.0
+version = 0.4.0
 description = A project example created from cookiecutter-sveetch-python.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
 author = David Thenon
 author_email = sveetch@gmail.com
 url = https://github.com/sveetch/sveetch-python-sample
+project_urls =
+    Source Code = https://github.com/sveetch/sveetch-python-sample
+    Issue Tracker = https://github.com/sveetch/sveetch-python-sample/issues
+    Changelog = https://sveetch-python-sample.readthedocs.io/en/latest/history.html
+    Documentation = https://sveetch-python-sample.readthedocs.io/
 license = MIT
 keywords = Python
 classifiers =
@@ -18,29 +23,31 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 include_package_data = True
 install_requires =
     click>=8.0
-    colorama
     colorlog
+    colorama
 packages = find:
 zip_safe = True
 
 [options.extras_require]
 dev =
-    flake8
     pytest
-    sphinx
-    sphinx-rtd-theme
-    livereload
-    twine
+quality =
+    flake8
     tox
+    twine
+doc =
+    sphinx
+    furo==2023.7.26
+    sphinx-copybutton==0.5.2
+    livereload
 
 [options.packages.find]
 where = .
@@ -76,7 +83,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist =  py{36,37,38,39}
+envlist =  py{38,310}
 
 [testenv]
 
