[CHG] Upgraded from project template release 0.4.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = sveetch-python-sample
-version = 0.4.1
+version = 0.4.2
 description = A project example created from cookiecutter-sveetch-python.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -47,6 +47,7 @@ doc =
     sphinx
     furo==2023.7.26
     sphinx-copybutton==0.5.2
+doc-live =
     livereload
 
 [options.packages.find]
